--- a/bower.json
+++ b/bower.json
@@ -3,12 +3,12 @@
   "version": "0.0.0",
   "homepage": "https://github.com/avkvak/watermark-gen",
   "authors": [
-    "Team #1"
+    "Team#1"
   ],
   "license": "MIT",
   "devDependencies": {
     "jquery": "~2.1.4",
-    "normalize-css": "~3.0.3",
-    "materialize": "~0.97.0"
+    "materialize": "~0.97.0",
+    "normalize-css": "~3.0.3"
   }
 }
