php and unit merged

--- a/bower.json
+++ b/bower.json
@@ -1,21 +1,15 @@
 {
-  "name": "Watermark Generator",
+  "name": "watermark",
   "version": "0.0.0",
+  "homepage": "https://github.com/avkvak/watermark-gen",
   "authors": [
-    "Dima Minka"
+    "Team#1"
   ],
   "license": "MIT",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "test",
-    "tests"
-  ],
-  "dependencies": {
-    "normalize.css": "~3.0.2",
-    "jquery": "1.11.1",
-    "modernizr": "~2.8.3",
+  "devDependencies": {
+    "jquery": "~2.1.4",
+    "materialize": "~0.97.0",
+    "normalize-css": "~3.0.3",
     "jquery-file-upload": "~9.8.0"
   }
 }
