--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-if": "^1.2.5",
     "gulp-imagemin": "^2.3.0",
     "gulp-jade": "^1.0.1",
+    "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.1.6",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
