resetOnfirst+lang.ini

--- a/app/lang.ini
+++ b/app/lang.ini
@@ -1,5 +1,25 @@
-[ru]
+[ru] 
 title = "Генератор водяных знаков"
+name = "Генератор водяных знаков"
+settings = "Настройки"
+origin = "Исходное изображение"
+water = "Водяной знак"
+location = "Положение"
+opacity = "Прозрачность"
+res = "Сброс"
+dow = "Скачать"
+foot = "&#169 2015, Это наш сайт, пожалуйста, не воруйте и не копируйте его"
+
+
 
 [eng]
 title = "Watermark generator"
+name = "Watermark generator"
+settings = "settings"
+origin = "The original image"
+water = "Watermark"
+location = "location"
+opacity = "Transparency"
+res = "reset"
+dow = "download"
+foot = "&#169 2015 , This is our website , please do not steal and do not copy it"
