--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "avkvak",
+  "name": "Loftschool_TEAM1",
   "version": "1.0.0",
   "description": "lorem ipsum dolor!",
-  "author": "avkvak",
+  "author": "Loftschool_TEAM1",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.7.12",
     "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
     "gulp-autoprefixer": "^2.3.1",
     "gulp-clean": "^0.3.1",
     "gulp-concat-css": "^2.2.0",
