Завел переведенный Асей текст. Работает

--- a/app/lang.ini
+++ b/app/lang.ini
@@ -10,16 +10,14 @@ res = "Сброс"
 dow = "Скачать"
 foot = "&#169 2015, Это наш сайт, пожалуйста, не воруйте и не копируйте его"
 
-
-
-[eng]
+[us]
 title = "Watermark generator"
 name = "Watermark generator"
-settings = "settings"
+settings = "Settings"
 origin = "The original image"
 water = "Watermark"
-location = "location"
+location = "Position"
 opacity = "Transparency"
-res = "reset"
-dow = "download"
-foot = "&#169 2015 , This is our website , please do not steal and do not copy it"
+res = "Reset"
+dow = "Download"
+foot = "&#169 2015, This is our website, please, do not steal and do not copy it"
